crates/fig-parser/tests/snapshots/integration_tests__structs__with_requires.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Queue
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires:
        - Path:
            path:
              segments:
                - Container
            generic_args:
              - Path:
                  path:
                    segments:
                      - T
                  generic_args: []
      fields:
        - name: head
          ty:
            Nullable:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Node
                    generic_args:
                      - Path:
                          path:
                            segments:
                              - T
                          generic_args: []
          visibility: Default
          annotations: []
        - name: tail
          ty:
            Nullable:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Node
                    generic_args:
                      - Path:
                          path:
                            segments:
                              - T
                          generic_args: []
          visibility: Default
          annotations: []
        - name: len
          ty: USize
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Display
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires:
        - Path:
            path:
              segments:
                - Drawable
            generic_args: []
        - Path:
            path:
              segments:
                - Resizable
            generic_args: []
      fields:
        - name: width
          ty: U32
          visibility: Default
          annotations: []
        - name: height
          ty: U32
          visibility: Default
          annotations: []
        - name: content
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
          visibility: Default
          annotations: []
