crates/fig-parser/tests/snapshots/integration_tests__structs__with_where.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Pair
      generic_params:
        - Type:
            name: A
            bounds:
              - Path:
                  path:
                    segments:
                      - Eq
                  generic_args: []
            default_type: ~
        - Type:
            name: B
            bounds:
              - Path:
                  path:
                    segments:
                      - Ord
                  generic_args: []
            default_type: ~
      requires: []
      fields:
        - name: first
          ty:
            Path:
              path:
                segments:
                  - A
              generic_args: []
          visibility: Default
          annotations: []
        - name: second
          ty:
            Path:
              path:
                segments:
                  - B
              generic_args: []
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Sorted
      generic_params:
        - Type:
            name: T
            bounds:
              - Path:
                  path:
                    segments:
                      - Ord
                  generic_args: []
              - Path:
                  path:
                    segments:
                      - Copy
                  generic_args: []
            default_type: ~
      requires: []
      fields:
        - name: data
          ty:
            Array:
              element_type:
                Path:
                  path:
                    segments:
                      - T
                  generic_args: []
              size: ~
          visibility: Default
          annotations: []
        - name: len
          ty: USize
          visibility: Default
          annotations: []
